--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <p>Adding a paragraph to test something with git</p>
         <ul>
             <li>Taco</li>
             <li>Kebab</li>
